--- a/PadelBackend/appsettings.json
+++ b/PadelBackend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DevConnection": "Data Source=DESKTOP-IMJQOBP\\SQLEXPRESS;Initial Catalog=Auth;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "SecretKey": "chessjoyer.com/antony"
+  },
   "AllowedHosts": "*"
 }
