Agregada Aplicación incompleta a pedido de Lau

--- a/PadelBackend/appsettings.json
+++ b/PadelBackend/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DevConnection": "añadir"
+  },
+  "JwtSettings": {
+    "SecretKey": "chessjoyer.com/antony"
+  },
   "AllowedHosts": "*"
 }
